--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <body>
-  <h1>Justin Silvus</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <h1>Hi Honey</h1>
+  <p>I'm turning this project into a fun thing for you :)</p>
+  <img src="https://media0.giphy.com/media/S2S0ZDytY6yDm/200.gif" />
  </body>
  
  </html>
