--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-  <h1>Hi Honey</h1>
+  <h1><a href=".style.css"></a>Hi Honey</h1>
   <p>I'm turning this project into a fun thing for you :)</p>
   <img src="https://media0.giphy.com/media/S2S0ZDytY6yDm/200.gif" />
  </body>
