--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
+<!DOCTYPE html>
 <html>
 
 <body>
-  <h1><a href=".style.css"></a>Hi Honey</h1>
-  <p>I'm turning this project into a fun thing for you :)</p>
-  <img src="https://media0.giphy.com/media/S2S0ZDytY6yDm/200.gif" />
+  <link href="./resources/index.css" type="text/css" rel="stylesheet">
+    <h1><a href=".style.css"></a>Hi Honey</h1>
+      <p class="introduction">I'm turning this project into a fun thing for you :)</p>
+      <div><p>As you will see in the unordered list below, the following image contains these essential elements for laughter and joy:</p>
+        <ul>
+            <li>A dog</li>
+            <li>A bum</li>
+            <li>A comical face shaped from said bum</li>
+            <li>A tail that is a nose that is disturbing</li>
+        </ul>
+
+        <h3>Please view the image now</h3>
+      </div>
+
+    <img src="https://media0.giphy.com/media/S2S0ZDytY6yDm/200.gif" class="dogbutt"/>
+      <figcaption>Dog with face butt</figcaption>
+
+      <p class="img-description">While some may find this image alarming, I infact think you will enjoy it. With a short google search of "funny gifs"; you will find the moving image a short way down the page. For your information you may view that here: <a href="https://www.google.com/search?q=funny+gifs&sxsrf=AOaemvJtZuutER-yfcz2ZJiZJnd8BAIykg:1640244426716&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiCpJjTsvn0AhWosFYBHdLmCbYQ_AUoAXoECAEQAw&biw=1121&bih=1166&dpr=0.8" target="_blank">funny gifs</a></p>
+
+  <h2>As it turns out, there is no theme to this page.</h2>
+    <p>Maybe I will just have to end this here. In the mean time I'm gonna mess with the colors, fonts and format and see what ugly mess I can make. See you at home. <3</p>
  </body>
  
  </html>
