--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
   <link href="./resources/style.css" type="text/css" rel="stylesheet">
-    <h1><a href=".style.css"></a>Hi Honey</h1>
+    <h1>Hi Honey</h1>
       <p class="introduction">I'm turning this project into a fun thing for you :)</p>
       <div><p>As you will see in the unordered list below, the following image contains these essential elements for laughter and joy:</p>
         <ul>
