--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-  <link href="css/style.css" type="text/css" rel="stylesheet">
+  <link href="style.css" type="text/css" rel="stylesheet">
     <h1>Hi Honey</h1>
       <p class="introduction">I'm turning this project into a fun thing for you :)</p>
       <div><p>As you will see in the unordered list below, the following image contains these essential elements for laughter and joy:</p>
