--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
   <head>
-  <link href="style.css" type="text/css" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="style.css" >
   </head>
     <h1>Hi Honey</h1>
       <p class="introduction">I'm turning this project into a fun thing for you :)</p>
